public/css/styles.css
.error {
  color: red;
}

@media screen and (min-width: 1300px) {
  #top-header {
  width: 100%;
  display: grid; 
  column-gap: 35%;
  grid-template-columns: auto auto;
  padding-bottom: 1%;
  }

  #siteName {
    width: 35%;
    font-size: 2.5em;
    padding-left: 2vw;
    padding-top: 1vw;
  }

  #tools {
    margin-left: 75%;
    align-content: center;
    width: 25%;
    font-size: 1em;
    padding-top: 1vw;
  }

  .nav {
    background-color: rgb(66, 65, 65);
  }

  .nav-ul {
    list-style-type: none;
    text-align: center;
    font-size: 1.5em;
    width: auto;
    height: 100%;
    display: grid;
    grid-auto-flow: column;
    margin-left: 5%;
    padding-top: 0.2%;
    padding-bottom: 0.2%;
  }

  .main-image-container {
    text-align: center;
    height: 20vw;
    width: 100%;
  }

  .main-image {
    height: 100%;
    z-index: 1;
  }

  .delorean {
    height: 20vw;
  }

  .own-container {
    color: blue;
    margin-left: 25%;
    margin-top: 2%;
    width: 12%;
    background-color: rgb(0, 0, 0);
    background-color: rgba(224, 222, 222, 0.616);
    border-radius: 15px;
    font-size: 2em;
    position: absolute;
    z-index: 2;
    padding-bottom: 2%;
  }

  .own-btn {
    color: white;
    background-color: blue;
    height: 2vw;
  }

  .spec-conainer {
    display: grid;
    column-gap: 15%;
    grid-template-columns: auto auto;
    text-align: center;
  }

  .upgrades-container {
    width: 100%;
  }

  .upgrades-header {
    font-size: 2em;
  }

  .reviews-header {
    font-size: 2em;
    margin-right: 20%;
  }

  .upgrades-grid {
    display: grid;
    column-gap: 15%;
    grid-template-columns: auto auto;
  }

  .img-container {
    background-color: DodgerBlue;
    margin: 10px;
    text-align: center;
    line-height: 75px;
    width: 80%;
    text-align: center;
    margin-left: 10%;
    padding-top: 5%;
  }

  .img-container > img { /*Target the images in the "imange-container"*/
    width: 30%;
  }

  .upgrades-grid > div {
    text-align: center;
    width: 80%;
  }

  .reviews-ul {
    text-align: left;
    display: grid;
    row-gap: 15%;
    grid-template-columns: auto;
    font-size: 1.5em;
  }
}

@media screen and (max-width: 1299px) {
  #top-header {
    width: 99%;
    padding: 1vw;
    display: grid;
    column-gap: 20%;
    grid-template-columns: auto auto;
  }

  #siteName {
    color: black;
    width: 80%;
    font-size: 1.4em;
    padding-top: 1vw;
    padding-left: 2vw;
  }

  #tools {
    margin-left: 50%;
    align-content: center;
    width: 40%;
    font-size: 0.8em;
    padding-top: 1vw;
  }

  .nav {
    background-color: rgb(66, 65, 65);
  }

  .nav-ul {
    list-style-type: none;
    text-align: center;
    color: white;
    font-size: 1em;
    max-width: 90%;
    column-gap: 2%;
    height: 100%;
    display: grid;
    grid-auto-flow: column;
    margin-left: 1%;
    padding-top: 0.2%;
    padding-bottom: 0.2%;
    padding-left: 0%;
  }

  .main-image-container {
    text-align: center;
    height: 45vw;
    width: 100%;
  }

  .main-image {
    height: 100%;
    z-index: 1;
  }

  .delorean {
    height: 40vw;
  }

  .own-container {
    color: blue;
    margin-top: 5%;
    margin-left: 12%;
    width: 32%;
    background-color: rgb(0, 0, 0);
    background-color: rgba(224, 222, 222, 0.616);
    border-radius: 15px;
    font-size: 1.2em;
    position: absolute;
    z-index: 2;
    padding-bottom: 2%;
  }

  .own-btn {
    color: white;
    background-color: blue;
    height: 8vw;
    font-size: 0.8em;
  }

  .spec-conainer {
    display: grid;
    column-gap: 15%;
    row-gap: 10%;
    grid-template-columns: auto;
    text-align: center;
    margin-bottom: 20%;
  }

  .upgrades-container {
    width: 100%;
  }

  .upgrades-header {
    font-size: 1.6em;
    text-align: center;
  }

  .reviews-header {
    font-size: 1.6em;
    text-align: center;
  }

  .upgrades-grid {
    display: grid;
    column-gap: 15%;
    grid-template-columns: auto auto;
  }

  .img-container {
    background-color: DodgerBlue;
    margin: 10px;
    text-align: center;
    line-height: 75px;
    width: 80%;
    text-align: center;
    margin-left: 10%;
    padding-top: 5%;
  }

  .img-container > img { /*Target the images in the "imange-cinatiner"*/
    width: 30%;
  }

  .upgrades-grid > div {
    text-align: center;
    width: 80%;
  }

  .reviews-ul {
    text-align: left;
    display: grid;
    row-gap: 15%;
    grid-template-columns: auto;
    font-size: 1em;
  }
}

footer {
  text-align: center;
  width: 99%;
}

